--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -159,6 +159,7 @@ a {
 
 .hero__media {
     flex: 1;
+    position: relative;
     display: flex;
     justify-content: flex-end;
     gap: 20px;
@@ -175,6 +176,20 @@ a {
     transition: all 0.3s ease-in-out;
     position: relative;
     z-index: 10;
+}
+
+.hero__media--blur {
+    position: absolute;
+    width: 340px;
+    height: 340px;
+    border-radius: 340px;
+    background: #4dbb9a;
+    filter: blur(137px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 9;
+    pointer-events: none;
 }
 
 .hero__media-img:hover {
@@ -204,7 +219,7 @@ a {
     position: absolute;
     top: 25px;
     left: 293px;
-    z-index: 15;
+    z-index: 14;
     pointer-events: none;
 }
 
@@ -213,4 +228,34 @@ a {
     position: absolute;
     right: -231px;
     bottom: 0;
+}
+
+/* Client */
+.client {
+    margin-top: 42px;
+    border-radius: 100.5px;
+    background: var(--secondary-color);
+}
+
+.client__wrapper {
+    align-items: center;
+    justify-content: space-between;
+    padding: 76px 121px;
+}
+
+.client__link {
+    display: flex;
+    align-items: center;
+    transition: all 0.2s ease-in-out;
+}
+
+.client__link:hover {
+    transform: scale(1.3);
+}
+
+.client__name {
+    color: #163c35;
+    font-size: 2.6rem;
+    font-weight: 400;
+    margin-left: 11px;
 }
