--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -259,3 +259,118 @@ a {
     font-weight: 400;
     margin-left: 11px;
 }
+
+/* Services */
+.service {
+    margin-top: 106px;
+}
+
+.service__label {
+    position: relative;
+    color: var(--primary-color-textColor);
+    font-size: 1.6rem;
+    line-height: 2.6rem;
+    padding-left: 46px;
+}
+
+.service__label::before {
+    content: "";
+    width: 25px;
+    height: 1px;
+    background-color: var(--primary-color-textColor);
+    position: absolute;
+    top: 50%;
+    left: 0;
+}
+
+.service__header {
+    margin-top: 12px;
+    align-items: center;
+    justify-content: space-between;
+}
+
+.service__title {
+    position: relative;
+    width: 520px;
+    color: var(--primary-color-textColor);
+    font-size: 4.2rem;
+    font-weight: 600;
+    line-height: 5.2rem;
+}
+
+.service__title::after {
+    content: "";
+    width: 66px;
+    height: 2px;
+    background-color: var(--primary-color-textColor);
+    position: absolute;
+    right: 103px;
+    bottom: 19px;
+}
+
+.service__cta {
+    display: flex;
+    gap: 17px;
+    margin-right: 73px;
+}
+
+.service__cta-btn {
+    width: 54px;
+    height: 54px;
+    border-radius: 54px;
+    border: none;
+    background: var(--secondary-color);
+    color: var(--primary-color-textColor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.3s ease-in-out;
+}
+
+.service__cta-btn:hover {
+    color: white;
+    background: var(--primary-color);
+}
+
+.service__items {
+    margin-top: 76px;
+    gap: 16px;
+}
+
+.service__item {
+    cursor: pointer;
+    flex: 1;
+    border-radius: 20px;
+    overflow: hidden;
+    transition: all 0.3s ease-in-out;
+}
+
+.service__item:hover {
+    box-shadow: -6px 9px 64px -4px rgba(118, 118, 118, 0.25);
+    transform: scale(1.05);
+}
+
+.service__item-img {
+    width: 100%;
+    height: 318px;
+    object-fit: cover;
+}
+
+.service__item-info {
+    padding: 24px 18px 23px;
+}
+
+.service__item-name {
+    color: var(--primary-color-textColor);
+    font-size: 2.2rem;
+    font-weight: 600;
+    line-height: 2.2rem;
+}
+
+.service__item-desc {
+    width: 268px;
+    color: var(--secondary-color-textColor);
+    margin-top: 18px;
+    font-size: 1.4rem;
+    line-height: 2.4rem;
+}
